paper updates to discussion

--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -464,13 +464,12 @@ Template
 7. Conclusion (optional) - brief paragraph summarizing central ideas and findings
 -->
 
-Although Bayesian CPM models have been frequently applied to ordinal data when the number of outcome categories is much smaller than the sample size, the extension to continuous or mixed outcomes where the number of categories is close to the sample size can be accomplished with only a few modifications to the prior specification. These modifications provide a versatile model with many advantages including the ability to handle both continuous and discrete ordered outcomes and estimation of the full conditional CDF, along with quantiles and other functionals using a single model fit. Inference for the quantities of interest can be easily interpreted using posterior probability statements and without asymptotic assumptions. The CPM also eliminates the need to specify the transformation required to meet distributional assumptions by estimating this transformation nonparametrically. As a result its parameter estimates are invariant monotonic transformations of the data. 
-
+Although Bayesian CPM models have been frequently applied to ordinal data when the number of outcome categories is much smaller than the sample size, the extension to continuous or mixed outcomes where the number of categories is close to the sample size can be accomplished with only a few modifications to the prior specification. These modifications provide a versatile model with several advantages including the ability to handle both continuous and discrete ordered outcomes and estimation of the full conditional CDF, along with quantiles and other functionals using a single model fit. Inference is based on posterior probability statements and does not require asymptotic assumptions. In addition, the CPM does not require specification of a transformation to meet distributional assumptions since the transformation is estimated nonparametrically. As a result its parameter estimates are invariant to monotonic transformations of the data. 
 
 Our implementation of a Bayesian CPM performed reasonably well for the simple simulation scenarios considered. However, the model can produce very biased estimates 
-for quantiles further from median and conditional values further from the model where $\boldsymbol{X}=0$ and this bias can be exacerbated by censoring<!--because, by design, we make no parametric assumptions that can provide information here-->.
-The model is best suited for cases when the sample size is large enough to inform the full conditional posterior CDF. In our simulations, a sample size of 50 or 100 was required for reasonably unbiased estimates of parameters and other posterior quantities. The choice of Dirichlet prior concentration of magnitude $\approx \frac{1}{J}$ has minimal impact on posterior estimates, except with small sample sizes. <!--Larger concentration parameters will shrink estimates heavily toward intercepts under assumption of equal probability --> <!-- Although the model can be used with mixed continuous/discrete data, care should be exercised when using mixed outcomes or estimating quantities based on the tails of the CDF-->
-As with all Bayesian models using MCMC, checks of model convergence, model fit and the posterior distribution are important. This is especially true when modeling a mixed continuous/discrete or when interest lies in quantities conditional on covariates far from the observed mean values.
+for quantiles far from the median and conditional quantities further from the model where $\boldsymbol{X}=0$ and this bias can be exacerbated by censoring<!--because, by design, we make no parametric assumptions that can provide information here-->.
+The model is best suited for cases when the data are fairly dense and are sufficient to describe the posterior CDF well. In our simulations, a sample size of 50 or 100 was required for reasonably unbiased estimates of parameters and other posterior quantities. The choice of Dirichlet prior concentration of magnitude $\approx \frac{1}{J}$ has minimal impact on posterior estimates, except with small sample sizes. Much larger concentration parameters (e.g., $\boldsymbol{\alpha}=1$) may be too informative. <!--Larger concentration parameters will shrink estimates heavily toward intercepts under assumption of equal probability --> <!-- Although the model can be used with mixed continuous/discrete data, care should be exercised when using mixed outcomes or estimating quantities based on the tails of the CDF-->
+As with all Bayesian models estimated with MCMC, checks of model convergence, model fit and the posterior distribution are important. This is especially true when modeling a mixed continuous/discrete or when interest lies in quantities conditional on covariates far from the observed mean values.
 
 Finally, there are several of limitations of the current model that present an opportunity for improvement. First, the number of distinct outcome values must be technically be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be known before data collection, so the prior cannot be specified without reference to the observed data. For the same reason, the model cannot accomodate new observations for an unobserved category; once the initial prior is set, there is no way to add categories and all predictions are assumed to come from one of the original categories. It may be possible to overcome this limitation by substituting the Dirichlet prior for a infinite-dimenisonal Bayesian nonparametric analog, such as a Dirichlet process prior at the expense of additional complexity and computation time. Next, the choice of link function, and the implied error distribution on the scale of the latent untransformed data is also assumed to be known. As was seen in the simulations, misspecification of the link function can lead to bias due to the mismatch between the assumed and latent error. This makes interpretation of the $\beta$ parameter estimates challenging because they are only estimated up to a constant of proportionality. If primary interest is not inference for the parameters, specification of the link could be avoided by either estimating the link nonparametrically [@mallick_bayesian_2003; @song_semiparametric_2012; @tang_semiparametric_2018] or using a more flexible mixture link function [@lang_bayesian_1999].
 
